Fixed some breaks on the home view

--- a/public/css/components.scss
+++ b/public/css/components.scss
@@ -6,7 +6,8 @@
     padding: 15px;
 
     .header__logo {
-        font-size: 24px;
+        font-size: 22px;
+        display: inline;
     }
 
     .header__burger {
@@ -23,7 +24,7 @@
         text-align: right;
         list-style-type: none;
         float: right;
-        margin: 0px;
+        margin: 0;
         
         a { 
             padding-right: 20px;
@@ -37,7 +38,7 @@
 
         @media only screen and (max-width: 767px) {
             float: none;
-            padding: 0px;
+            margin: 16px 0;
             background-color: #EC407A;
 
             &.true { display: block }
