--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -4,4 +4,4 @@
 @import 'components';
 @import 'views';
 
-body { background: #FAFAFA; }
+body { background: #e8e8e8; }
