--- a/public/css/views.scss
+++ b/public/css/views.scss
@@ -7,12 +7,12 @@
     left: 0px;
     z-index: -1;
 
-    .container { color: #FFF; }
+    .container { color: #FFF; margin-top: 120px; }
 
     .row { margin-bottom: 15px; }
 
     .home__img {
-        border: 1px solid white; height: 500px;
+        height: 300px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -30,14 +30,31 @@
     }
 
     .home__desc {
-        border: 1px solid white; height: 500px;
+        height: 300px;
         display: flex;
         align-items: center;  
         justify-content: center;
         color: #FFF;  
     }
 
-    .home__icons { border: 1px solid white; height: 200px; }
+    .home__icons {
+        height: 100px; 
+        display: flex;
+        align-items: center;  
+        justify-content: center;
+        border-top: 5px solid #FFF;
+        margin-top: 15px;
+
+        * {
+            font-size: 50px;
+            padding: 15px;
+            color: #FFF; 
+        } 
+
+        @media only screen and (max-width: 767px) {
+            * { padding: 8px; }
+        }
+    }
 }
 
 .projects {
